--- a/SCSS/partials/_buttons.scss
+++ b/SCSS/partials/_buttons.scss
@@ -4,4 +4,7 @@
     --bs-btn-hover-bg: #2a025e; /* background hover boton */
     --bs-btn-border-color: #141433; /* border color boton */
     --bs-btn-active-bg: #141433;
+    --bs-btn-focus-box-shadow:none
+    
+    
 }
