--- a/views/gallery.html
+++ b/views/gallery.html
@@ -19,7 +19,17 @@
     <header>
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html">*EMPRESA*</a>
+                <a class="navbar-brand" href="../index.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-motherboard-fill" viewBox="0 0 16 16">
+                        <path d="M5 7h3V4H5v3Z" />
+                        <path
+                            d="M1 2a2 2 0 0 1 2-2h11a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-2H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 9H1V8H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 6H1V5H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 2H1Zm11 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7Zm2 0a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7ZM3.5 10a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1h-6Zm0 2a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1h-6ZM4 4h-.5a.5.5 0 0 0 0 1H4v1h-.5a.5.5 0 0 0 0 1H4a1 1 0 0 0 1 1v.5a.5.5 0 0 0 1 0V8h1v.5a.5.5 0 0 0 1 0V8a1 1 0 0 0 1-1h.5a.5.5 0 0 0 0-1H9V5h.5a.5.5 0 0 0 0-1H9a1 1 0 0 0-1-1v-.5a.5.5 0 0 0-1 0V3H6v-.5a.5.5 0 0 0-1 0V3a1 1 0 0 0-1 1Zm7 7.5v1a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-2a.5.5 0 0 0-.5.5Z" />
+                    </svg>
+                    <P>
+                        PCWorld
+                    </P>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -63,7 +73,7 @@
                         <div class="card" style="width: 18rem;">
                             <img src="../Img/Galeria/PC3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title"><strong>PC3</strong></h5>
+                                <h5 class="card-title neon"><strong>PC3</strong></h5>
                                 <p class="text-center card-text">
                             </div>
                         </div>
@@ -76,7 +86,7 @@
                         <div class="card" style="width: 18rem;">
                             <img src="../Img/Galeria/PC4.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">PC2</h5>
+                                <h5 class="card-title neon"><strong>PC2</strong></h5>
                             </div>
                         </div>
                     </div>
@@ -88,7 +98,7 @@
                         <div class="card" style="width: 18rem;">
                             <img src="../Img/Galeria/PC5.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title"><strong>PC1</strong></h5>
+                                <h5 class="card-title neon"><strong>PC1</strong></h5>
                             </div>
                         </div>
                     </div>
@@ -111,7 +121,7 @@
                                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                         allowfullscreen style="margin: 0;"></iframe>
                                     <div class="card-body">
-                                        <h5 class="card-title"><strong>VID3</strong></h5>
+                                        <h5 class="card-title neon"><strong>VID3</strong></h5>
                                         <p class="text-center card-text">
                                     </div>
                                 </div>
@@ -129,7 +139,7 @@
                                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                         allowfullscreen></iframe>
                                     <div class="card-body">
-                                        <h5 class="card-title"><strong>VID2</strong></h5>
+                                        <h5 class="card-title neon"><strong>VID2</strong></h5>
                                     </div>
                                 </div>
                             </div>
@@ -147,7 +157,7 @@
                                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                         allowfullscreen></iframe>
                                     <div class="card-body">
-                                        <h5 class="card-title"><strong>VID1</strong></h5>
+                                        <h5 class="card-title neon"><strong>VID1</strong></h5>
                                     </div>
                                 </div>
                             </div>
@@ -157,14 +167,14 @@
             </section>
         </div>
     </main>
-    <footer class="text-center text-lg-start text-white" style="background-color: #3f3686">
+    <footer class="text-center text-lg-start text-white">
         <div class="container p-4 pb-0">
             <section class="">
                 <div class="row">
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                         <p>
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #333333"
-                                href="../index.html" role="button"><i class="bi bi-motherboard">*EMPRESA*</i></a>
+                                href="../index.html" role="button"><i class="bi bi-motherboard">PCWorld</i></a>
                         </p>
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
