--- a/SCSS/utilities/_variables.scss
+++ b/SCSS/utilities/_variables.scss
@@ -1,13 +1,14 @@
 /* variables de color */
-$color_principal: #000026 ;
+$color_principal: #000026;
 $color_secundario: #110952;
-$color_textcard :#cf9bf1 ;
+$color_textcard :#cf9bf1;
+$color_footer: #3f3686;
 
 /* font */
 $font-principal: 'roboto';
 
-$box-shadow:                  0 .5rem 1rem rgba(black, .15);
-$box-shadow-sm:               0 .125rem .25rem rgba(black, .075);
-$box-shadow-lg:               0 1rem 3rem rgba(black, .175);
-$box-shadow-inset:            inset 0 1px 2px rgba(black, .075);
+$box-shadow: 0 .5rem 1rem rgba(black, .15);
+$box-shadow-sm: 0 .125rem .25rem rgba(black, .075);
+$box-shadow-lg: 0 1rem 3rem rgba(black, .175);
+$box-shadow-inset: inset 0 1px 2px rgba(black, .075);
 
