--- a/views/product.html
+++ b/views/product.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <meta name="description" content="pagina de hardware general">
+    <meta name="keywords" content="PC, Computadoras, Hardware, Placas de video, gpu, gabinete, cpu,">
+    <meta name="author" content="Lopez Carlos">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
