--- a/views/about.html
+++ b/views/about.html
@@ -99,16 +99,19 @@
                         <div class="accordion" id="accordionExample">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingOne">
-                                    <button class="accordion-button neon" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    <button class="accordion-button collapsed neon" type="button"
+                                        data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
+                                        aria-controls="collapseOne">
                                         Como hago para comprar?
                                     </button>
                                 </h2>
-                                <div id="collapseOne" class="accordion-collapse collapse show"
-                                    aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                <div id="collapseOne" class="accordion-collapse collapse"
+                                    aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        <strong>Elegí el producto que necesitás y luego hacé clic en "Comprar", eso hará
-                                            que se agregue a tu Carrito de Compra.</strong>
+                                        <strong>
+                                            Elegí el producto que necesitás y luego hacé clic en "Comprar", eso hará
+                                            que se agregue a tu Carrito de Compra.
+                                        </strong>
                                     </div>
                                 </div>
                             </div>
@@ -172,7 +175,7 @@
     <!-- INICIA FOOTER -->
     <footer class="text-center text-lg-start text-white">
         <div class="container p-4 pb-0">
-            <section class="">
+            <section>
                 <div class="row">
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                         <p>
@@ -193,13 +196,13 @@
                     </div>
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                         <p>
-                            <a class="text-white" href="./gallery.html">galeria</a>
+                            <a class="text-white" href="./gallery.html">Galeria</a>
                         </p>
                         <p>
-                            <a class="text-white" href="./about.html">about</a>
+                            <a class="text-white" href="./about.html">Sobre nosotros</a>
                         </p>
                         <p>
-                            <a class="text-danger" href="#">boton arrepentimiento</a>
+                            <a class="text-danger" href="#">Boton arrepentimiento</a>
                         </p>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
