--- a/views/contact.html
+++ b/views/contact.html
@@ -114,7 +114,6 @@
                                 href="../index.html" role="button"><i class="bi bi-motherboard">PCWorld</i></a>
                         </p>
                     </div>
-                    <hr class="w-100 clearfix d-md-none" />
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                         <p>
                             <a class="text-white" href="../index.html">Home</a>
@@ -126,17 +125,15 @@
                             <a class="text-white" href="../views/contact.html">Contacto</a>
                         </p>
                     </div>
-                    <hr class="w-100 clearfix d-md-none" />
-                    <hr class="w-100 clearfix d-md-none" />
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                         <p>
-                            <a class="text-white" href="../views/gallery.html">galeria</a>
+                            <a class="text-white" href="../views/gallery.html">Galeria</a>
                         </p>
                         <p>
-                            <a class="text-white" href="../views/about.html">about</a>
+                            <a class="text-white" href="../views/about.html">Sobre nosotros</a>
                         </p>
                         <p>
-                            <a class="text-danger" href="#">boton arrepentimiento</a>
+                            <a class="text-danger" href="#">Boton arrepentimiento</a>
                         </p>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
