--- a/views/product.html
+++ b/views/product.html
@@ -304,7 +304,7 @@
     </main>
     <footer class="text-center text-lg-start text-white">
         <div class="container p-4 pb-0">
-            <section class="">
+            <section>
                 <div class="row">
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                         <p>
@@ -312,11 +312,10 @@
                                 href="../index.html" role="button"><i class="bi bi-motherboard">PCWorld</i></a>
                         </p>
                     </div>
-                    <hr class="w-100 clearfix d-md-none" />
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                         <div>
                             <p>
-                                <a class="text-white" href="../index.html">Home</a>
+                                <a class="text-white" href="../index.html">Inicio</a>
                             </p>
                         </div>
                         <div>
@@ -330,14 +329,12 @@
                             </p>
                         </div>
                     </div>
-                    <hr class="w-100 clearfix d-md-none" />
-                    <hr class="w-100 clearfix d-md-none" />
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                         <p>
-                            <a class="text-white" href="./gallery.html">galeria</a>
+                            <a class="text-white" href="./gallery.html">Galeria</a>
                         </p>
                         <p>
-                            <a class="text-white" href="./about.html">about</a>
+                            <a class="text-white" href="./about.html">Sobre Nosotros</a>
                         </p>
                         <p>
                             <a class="text-danger" href="#">boton arrepentimiento</a>
